fix: 보너스 계산 로직 수정
- 보너스 수량은 최대 1개만 가능하도록 수정한다.